--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,5 +1,117 @@
 # demoted packages from artful to bionic
+android-tools-fsutils
+anthy
+anthy-common
+augeas-tools
+ca-certificates-mono
+cdbs
+cli-common
+cli-common-dev
+cpp-5
+cpp-5-doc
+cvs
+dh-translations
+ecj-gcj
+fig2dev
+fonts-alee
+fonts-arphic-bkai00mp
+fonts-arphic-bsmi00lp
+fonts-arphic-gbsn00lp
+fonts-arphic-gkai00mp
+fonts-nanum
+fonts-nanum-coding
+fonts-nanum-extra
+fonts-takao-gothic
+fonts-takao-mincho
+fonts-takao-pgothic
+fonts-unfonts-core
+gcc-5
+gcc-5-base
+gcc-5-doc
+gcc-5-plugin-dev
+gccgo-5-doc
+gcj-5-jre-lib
+gcj-6-jre-lib
+gettext-el
+gfortran-5-doc
+gir1.2-appindicator-0.1
+gir1.2-dbusmenu-gtk-0.4
+gir1.2-gnomekeyring-1.0
 gnome-user-share
+golang-1.8
+golang-any
+golang-check.v1-dev
+golang-context-dev
+golang-github-dustinkirkland-golang-petname-dev
+golang-github-gorilla-context-dev
+golang-github-gorilla-mux-dev
+golang-github-gorilla-websocket-dev
+golang-github-gosexy-gettext-dev
+golang-github-mattn-go-colorable-dev
+golang-github-mattn-go-isatty-dev
+golang-github-mattn-go-runewidth-dev
+golang-github-mattn-go-sqlite3-dev
+golang-github-olekukonko-tablewriter-dev
+golang-github-pborman-uuid-dev
+golang-go.crypto-dev
+golang-go.net-dev
+golang-gocapability-dev
+golang-golang-x-crypto-dev
+golang-golang-x-net-dev
+golang-golang-x-sync-dev
+golang-golang-x-text-dev
+golang-gopkg-check.v1-dev
+golang-gopkg-flosch-pongo2.v3-dev
+golang-gopkg-inconshreveable-log15.v2-dev
+golang-gopkg-lxc-go-lxc.v2-dev
+golang-gopkg-tomb.v2-dev
+golang-gopkg-yaml.v2-dev
+golang-goprotobuf-dev
+golang-petname-dev
+golang-uuid-dev
+golang-websocket-dev
+golang-x-text-dev
+golang-yaml.v2-dev
+graphviz
+graphviz-dev
+graphviz-doc
+gtk-sharp2-examples
+gutenprint-locales
+ibus-anthy
+ibus-anthy-dev
+ibus-table-erbi
+ibus-table-extraphrase
+ibus-table-yong
+ibus-wayland
+idle-python2.7
+inkscape
+intltool
+kerneloops-applet
+lib32asan2
+lib32asan2-dbg
+lib32gcc-5-dev
+lib32gfortran-5-dev
+lib32mpx0-dbg
+lib32objc-5-dev
+lib32phobos-5-dev
+lib32stdc++-5-dev
+lib32stdc++6-5-dbg
+lib64asan2
+lib64asan2-dbg
+lib64gcc-5-dev
+lib64gfortran-5-dev
+lib64mpx0-dbg
+lib64objc-5-dev
+lib64phobos-5-dev
+lib64stdc++-5-dev
+lib64stdc++6-5-dbg
+libanthy-dev
+libappindicator-dev
+libappindicator0.1-cil
+libappindicator0.1-cil-dev
+libappindicator1
+libasan2
+libasan2-dbg
 libboost-atomic1.62-dev
 libboost-atomic1.62.0
 libboost-chrono1.62-dev
@@ -26,6 +138,11 @@ libboost-thread1.62.0
 libboost1.62-dev
 libboost1.62-doc
 libboost1.62-tools-dev
+libcanberra-gtk-module
+libcdt5
+libcgraph6
+libdbusmenu-gtk-dev
+libecj-java-gcj
 libfreerdp-cache1.1
 libfreerdp-client1.1
 libfreerdp-codec1.1
@@ -39,6 +156,231 @@ libfreerdp-plugins-standard
 libfreerdp-primitives1.1
 libfreerdp-rail1.1
 libfreerdp-utils1.1
+libgcc-5-dev
+libgccjit-5-dev
+libgccjit-5-doc
+libgcj-bc
+libgcj-common
+libgcj16
+libgcj16-awt
+libgcj16-dbg
+libgcj16-dev
+libgcj17
+libgcj17-awt
+libgcj17-dbg
+libgcj17-dev
+libgdiplus
+libgfortran-5-dev
+libglade2-dev
+libglade2.0-cil
+libglade2.0-cil-dev
+libglib2.0-cil
+libglib2.0-cil-dev
+libgnome-keyring-common
+libgnome-keyring-dev
+libgnome-keyring0
+libgnome-keyring0-dbg
+libgpod-cil
+libgpod-cil-dev
+libgraphviz-dev
+libgsl-dbg
+libgsl-dev
+libgsl23
+libgslcblas0
+libgtk2.0-cil
+libgtk2.0-cil-dev
+libgtkspell-dev
+libgtkspell0
+libgutenprintui2-1
+libgutenprintui2-dev
+libgvc6
+libgvc6-plugins-gtk
+libgvpr2
+libical2
+libimage-magick-perl
+libimage-magick-q16-perl
+libindicator-dev
+libindicator3-dev
+libindicator7
+libmono-2.0-dev
+libmono-accessibility4.0-cil
+libmono-cairo4.0-cil
+libmono-cecil-private-cil
+libmono-cil-dev
+libmono-codecontracts4.0-cil
+libmono-compilerservices-symbolwriter4.0-cil
+libmono-corlib4.5-cil
+libmono-cscompmgd0.0-cil
+libmono-csharp4.0c-cil
+libmono-custommarshalers4.0-cil
+libmono-data-tds4.0-cil
+libmono-db2-1.0-cil
+libmono-debugger-soft4.0a-cil
+libmono-http4.0-cil
+libmono-i18n-cjk4.0-cil
+libmono-i18n-mideast4.0-cil
+libmono-i18n-other4.0-cil
+libmono-i18n-rare4.0-cil
+libmono-i18n-west4.0-cil
+libmono-i18n4.0-all
+libmono-i18n4.0-cil
+libmono-ldap4.0-cil
+libmono-management4.0-cil
+libmono-messaging-rabbitmq4.0-cil
+libmono-messaging4.0-cil
+libmono-microsoft-build-engine4.0-cil
+libmono-microsoft-build-framework4.0-cil
+libmono-microsoft-build-tasks-v4.0-4.0-cil
+libmono-microsoft-build-utilities-v4.0-4.0-cil
+libmono-microsoft-build4.0-cil
+libmono-microsoft-csharp4.0-cil
+libmono-microsoft-visualc10.0-cil
+libmono-microsoft-web-infrastructure1.0-cil
+libmono-oracle4.0-cil
+libmono-parallel4.0-cil
+libmono-peapi4.0a-cil
+libmono-posix4.0-cil
+libmono-rabbitmq4.0-cil
+libmono-relaxng4.0-cil
+libmono-security4.0-cil
+libmono-sharpzip4.84-cil
+libmono-simd4.0-cil
+libmono-smdiagnostics0.0-cil
+libmono-sqlite4.0-cil
+libmono-system-componentmodel-composition4.0-cil
+libmono-system-componentmodel-dataannotations4.0-cil
+libmono-system-configuration-install4.0-cil
+libmono-system-configuration4.0-cil
+libmono-system-core4.0-cil
+libmono-system-data-datasetextensions4.0-cil
+libmono-system-data-entity4.0-cil
+libmono-system-data-linq4.0-cil
+libmono-system-data-services-client4.0-cil
+libmono-system-data-services4.0-cil
+libmono-system-data4.0-cil
+libmono-system-deployment4.0-cil
+libmono-system-design4.0-cil
+libmono-system-drawing-design4.0-cil
+libmono-system-drawing4.0-cil
+libmono-system-dynamic4.0-cil
+libmono-system-enterpriseservices4.0-cil
+libmono-system-identitymodel-selectors4.0-cil
+libmono-system-identitymodel4.0-cil
+libmono-system-io-compression-filesystem4.0-cil
+libmono-system-io-compression4.0-cil
+libmono-system-json-microsoft4.0-cil
+libmono-system-json4.0-cil
+libmono-system-ldap-protocols4.0-cil
+libmono-system-ldap4.0-cil
+libmono-system-management4.0-cil
+libmono-system-messaging4.0-cil
+libmono-system-net-http-formatting4.0-cil
+libmono-system-net-http-webrequest4.0-cil
+libmono-system-net-http4.0-cil
+libmono-system-net4.0-cil
+libmono-system-numerics-vectors4.0-cil
+libmono-system-numerics4.0-cil
+libmono-system-reactive-core2.2-cil
+libmono-system-reactive-debugger2.2-cil
+libmono-system-reactive-experimental2.2-cil
+libmono-system-reactive-interfaces2.2-cil
+libmono-system-reactive-linq2.2-cil
+libmono-system-reactive-observable-aliases0.0-cil
+libmono-system-reactive-platformservices2.2-cil
+libmono-system-reactive-providers2.2-cil
+libmono-system-reactive-runtime-remoting2.2-cil
+libmono-system-reactive-windows-forms2.2-cil
+libmono-system-reactive-windows-threading2.2-cil
+libmono-system-reflection-context4.0-cil
+libmono-system-runtime-caching4.0-cil
+libmono-system-runtime-durableinstancing4.0-cil
+libmono-system-runtime-interopservices-runtimeinformation4.0-cil
+libmono-system-runtime-serialization-formatters-soap4.0-cil
+libmono-system-runtime-serialization4.0-cil
+libmono-system-runtime4.0-cil
+libmono-system-security4.0-cil
+libmono-system-servicemodel-activation4.0-cil
+libmono-system-servicemodel-discovery4.0-cil
+libmono-system-servicemodel-internals0.0-cil
+libmono-system-servicemodel-routing4.0-cil
+libmono-system-servicemodel-web4.0-cil
+libmono-system-servicemodel4.0a-cil
+libmono-system-serviceprocess4.0-cil
+libmono-system-threading-tasks-dataflow4.0-cil
+libmono-system-transactions4.0-cil
+libmono-system-web-abstractions4.0-cil
+libmono-system-web-applicationservices4.0-cil
+libmono-system-web-dynamicdata4.0-cil
+libmono-system-web-extensions-design4.0-cil
+libmono-system-web-extensions4.0-cil
+libmono-system-web-http-selfhost4.0-cil
+libmono-system-web-http-webhost4.0-cil
+libmono-system-web-http4.0-cil
+libmono-system-web-mobile4.0-cil
+libmono-system-web-mvc3.0-cil
+libmono-system-web-razor2.0-cil
+libmono-system-web-regularexpressions4.0-cil
+libmono-system-web-routing4.0-cil
+libmono-system-web-services4.0-cil
+libmono-system-web-webpages-deployment2.0-cil
+libmono-system-web-webpages-razor2.0-cil
+libmono-system-web-webpages2.0-cil
+libmono-system-web4.0-cil
+libmono-system-windows-forms-datavisualization4.0a-cil
+libmono-system-windows-forms4.0-cil
+libmono-system-windows4.0-cil
+libmono-system-workflow-activities4.0-cil
+libmono-system-workflow-componentmodel4.0-cil
+libmono-system-workflow-runtime4.0-cil
+libmono-system-xaml4.0-cil
+libmono-system-xml-linq4.0-cil
+libmono-system-xml-serialization4.0-cil
+libmono-system-xml4.0-cil
+libmono-system4.0-cil
+libmono-tasklets4.0-cil
+libmono-webbrowser4.0-cil
+libmono-webmatrix-data4.0-cil
+libmono-windowsbase4.0-cil
+libmono-xbuild-tasks4.0-cil
+libmonoboehm-2.0-1
+libmonoboehm-2.0-1-dbg
+libmonoboehm-2.0-dev
+libmonosgen-2.0-1
+libmonosgen-2.0-1-dbg
+libmonosgen-2.0-dev
+libmpx0-dbg
+libnotmuch-dev
+libnotmuch5
+libnunit-cil-dev
+libnunit-console-runner2.6.3-cil
+libnunit-core-interfaces2.6.3-cil
+libnunit-core2.6.3-cil
+libnunit-framework2.6.3-cil
+libnunit-mocks2.6.3-cil
+libnunit-util2.6.3-cil
+libobjc-5-dev
+libosp-dev
+libosp5
+libostyle-dev
+libostyle1c2
+libpathplan4
+libphobos-5-dev
+libproxy-cil-dev
+libproxy0.4-cil
+librrds-perl
+librte-eal17.05
+librte-ethdev17.05
+librte-mempool17.05
+libserf-1-1
+libserf-dev
+libstdc++-5-dev
+libstdc++-5-doc
+libstdc++-5-pic
+libstdc++6-5-dbg
+libsvn-dev
+libsvn-doc
+libsvn-perl
+libsvn1
 libwinpr-asn1-0.1
 libwinpr-bcrypt0.1
 libwinpr-credentials0.1
@@ -70,4 +412,48 @@ libwinpr-timezone0.1
 libwinpr-utils0.1
 libwinpr-winhttp0.1
 libwinpr-winsock0.1
+libwmf-bin
+libx32asan2
+libx32asan2-dbg
+libx32gcc-5-dev
+libx32gfortran-5-dev
+libx32objc-5-dev
+libx32phobos-5-dev
+libx32stdc++-5-dev
+libx32stdc++6-5-dbg
+libxdot4
 libxfreerdp-client1.1
+libxml-dom-perl
+libxml-perl
+libxml-regexp-perl
+mono-4.0-gac
+mono-csharp-shell
+mono-devel
+mono-gac
+mono-mcs
+mono-runtime
+mono-runtime-boehm
+mono-runtime-common
+mono-runtime-dbg
+mono-runtime-sgen
+mono-utils
+mono-xbuild
+nabi
+ndiff
+openjade
+opensp
+protobuf-compiler
+python-gtk2-dbg
+python-gtk2-dev
+python-gtk2-doc
+python-problem-report
+python-pyrex
+python-scour
+python-subversion
+python-subversion-dbg
+python-svn
+rrdtool-dbg
+rrdtool-tcl
+subversion
+subversion-tools
+transfig
