* data/DistUpgrade.cfg: Add ubuntu-budgie-desktop support. * Run pre-build.sh to update mirrors.cfg and demoted.cfg.

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -14,7 +14,7 @@ MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-core,
    xubuntu-desktop, ubuntustudio-desktop, mythbuntu-desktop,
    kubuntu-netbook, lubuntu-core, lubuntu-desktop, ubuntu-gnome-desktop,
    ubuntu-mate-core, ubuntu-mate-cloudtop, ubuntu-mate-desktop,
-   ubuntukylin-desktop
+   ubuntukylin-desktop, ubuntu-budgie-desktop
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 Demotions=demoted.cfg
 #RemoveEssentialOk=sysvinit, sysvutils, belocs-locales-bin
@@ -108,6 +108,9 @@ PostUpgradeRemove=ibus
 
 [ubuntukylin-desktop]
 KeyDependencies=ubuntukylin-keyring, ubuntukylin-wallpapers, ubuntu-kylin-docs
+
+[ubuntu-budgie-desktop]
+KeyDependencies=budgie-desktop-environment, budgie-welcome, ubuntu-budgie-themes
 
 [Files]
 BackupExt=distUpgrade
