--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -11,6 +11,8 @@ cpp-5
 cpp-5-doc
 cvs
 dh-translations
+docbook-xml
+docbook-xsl
 ecj-gcj
 fig2dev
 fonts-alee
@@ -37,8 +39,15 @@ gfortran-5-doc
 gir1.2-appindicator-0.1
 gir1.2-dbusmenu-gtk-0.4
 gir1.2-gnomekeyring-1.0
+gir1.2-gucharmap-2.90
+gitk
 gnome-user-share
 golang-1.8
+golang-1.8-doc
+golang-1.8-go
+golang-1.8-go-shared-dev
+golang-1.8-race-detector-runtime
+golang-1.8-src
 golang-any
 golang-check.v1-dev
 golang-context-dev
@@ -73,19 +82,24 @@ golang-websocket-dev
 golang-x-text-dev
 golang-yaml.v2-dev
 graphviz
-graphviz-dev
 graphviz-doc
 gtk-sharp2-examples
+gucharmap
 gutenprint-locales
 ibus-anthy
 ibus-anthy-dev
+ibus-sunpinyin
 ibus-table-erbi
 ibus-table-extraphrase
 ibus-table-yong
 ibus-wayland
+idle
 idle-python2.7
+idle-python3.6
+idle3
 inkscape
 intltool
+isoquery
 kerneloops-applet
 lib32asan2
 lib32asan2-dbg
@@ -171,6 +185,7 @@ libgcj17-dbg
 libgcj17-dev
 libgdiplus
 libgfortran-5-dev
+libglade2-0
 libglade2-dev
 libglade2.0-cil
 libglade2.0-cil-dev
@@ -180,6 +195,7 @@ libgnome-keyring-common
 libgnome-keyring-dev
 libgnome-keyring0
 libgnome-keyring0-dbg
+libgolang-1.8-std1
 libgpod-cil
 libgpod-cil-dev
 libgraphviz-dev
@@ -191,6 +207,8 @@ libgtk2.0-cil
 libgtk2.0-cil-dev
 libgtkspell-dev
 libgtkspell0
+libgucharmap-2-90-7
+libgucharmap-2-90-dev
 libgutenprintui2-1
 libgutenprintui2-dev
 libgvc6
@@ -368,19 +386,20 @@ libphobos-5-dev
 libproxy-cil-dev
 libproxy0.4-cil
 librrds-perl
-librte-eal17.05
-librte-ethdev17.05
-librte-mempool17.05
 libserf-1-1
 libserf-dev
 libstdc++-5-dev
 libstdc++-5-doc
 libstdc++-5-pic
 libstdc++6-5-dbg
+libsunpinyin-dev
+libsunpinyin3-dbg
+libsunpinyin3v5
 libsvn-dev
 libsvn-doc
 libsvn-perl
 libsvn1
+libuniconf4.6
 libwinpr-asn1-0.1
 libwinpr-bcrypt0.1
 libwinpr-credentials0.1
@@ -413,6 +432,10 @@ libwinpr-utils0.1
 libwinpr-winhttp0.1
 libwinpr-winsock0.1
 libwmf-bin
+libwvstreams-dev
+libwvstreams4.6-base
+libwvstreams4.6-doc
+libwvstreams4.6-extras
 libx32asan2
 libx32asan2-dbg
 libx32gcc-5-dev
@@ -426,6 +449,9 @@ libxfreerdp-client1.1
 libxml-dom-perl
 libxml-perl
 libxml-regexp-perl
+libxplc0.3.13
+libxplc0.3.13-dev
+mdetect
 mono-4.0-gac
 mono-csharp-shell
 mono-devel
@@ -443,17 +469,34 @@ ndiff
 openjade
 opensp
 protobuf-compiler
+python-glade2
+python-gobject-2
+python-gobject-2-dbg
+python-gobject-2-dev
+python-gtk2
 python-gtk2-dbg
 python-gtk2-dev
 python-gtk2-doc
+python-newt
 python-problem-report
 python-pyrex
 python-scour
 python-subversion
 python-subversion-dbg
 python-svn
+python-tickcount
+python3-unicodecsv
 rrdtool-dbg
 rrdtool-tcl
+sgml-data
 subversion
 subversion-tools
+sunpinyin-data
+system-config-kickstart
 transfig
+uuidcdef
+wvdial
+xchat-gnome
+xchat-gnome-common
+xinetd
+xterm
