debian/control: have python3-distupgrade depend on sensible-utils. (LP: #1724224)

--- a/debian/control
+++ b/debian/control
@@ -40,7 +40,8 @@ Depends: ${python3:Depends},
          python3-update-manager (>= 1:0.196.2~),
          python3-apt (>= 0.8.5~),
          gpgv,
-         lsb-release
+         lsb-release,
+         sensible-utils
 Replaces: python3-update-manager (<< 1:0.165)
 Breaks: python3-update-manager (<< 1:0.165)
 Description: manage release upgrades
