Purge obsolete packages, if user agrees to remove obsolete packages. LP: #1749199

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -23,6 +23,7 @@ RemovalBlacklistFile=removal_blacklist.cfg
 KeepInstalledPkgs=xserver-xorg-video-all
 KeepInstalledSection=translations
 RemoveObsoletes=yes
+PurgeObsoletes=yes
 #ForcedObsoletes=ksplash-engine-moodin, powernowd, laptop-mode-tools
 # hints for for stuff that should be done right after the cache calculated
 # the dist-upgrade (not to be confused with the PostUpgrade hooks in the
