ubuntu-mate: Update KeyDependencies

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -95,15 +95,15 @@ KeyDependencies=lubuntu-core, lubuntu-default-settings
 KeyDependencies=ubuntu-gnome-default-settings, ubuntu-gnome-wallpapers
 
 [ubuntu-mate-core]
-KeyDependencies=folder-color-caja, ubuntu-mate-artwork, ubuntu-mate-default-settings, ubuntu-mate-welcome
+KeyDependencies=mate-desktop-environment-core, ubuntu-mate-default-settings, ubuntu-mate-artwork
 PostUpgradeRemove=ibus
 
 [ubuntu-mate-cloudtop]
-KeyDependencies=ubuntu-mate-core
+KeyDependencies=mate-desktop-environment-core, ubuntu-mate-core, ubuntu-mate-default-settings, ubuntu-mate-artwork
 PostUpgradeRemove=ibus
 
 [ubuntu-mate-desktop]
-KeyDependencies=deja-dup-caja, ubuntu-mate-core, ubuntu-mate-lightdm-theme
+KeyDependencies=mate-desktop-environment-core, ubuntu-mate-core, ubuntu-mate-default-settings, ubuntu-mate-artwork
 PostUpgradeRemove=ibus
 
 [ubuntukylin-desktop]
