ubuntu-mate: Make KeyDependencies distinctive for each meta package. Drop ubuntu-mate-cloudtop, it was removed in 16.10.

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -13,7 +13,7 @@ SupportSSH=DistUpgradeViewText,DistUpgradeViewNonInteractive
 MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-core,
    xubuntu-desktop, ubuntustudio-desktop, mythbuntu-desktop,
    kubuntu-netbook, lubuntu-core, lubuntu-desktop, ubuntu-gnome-desktop,
-   ubuntu-mate-core, ubuntu-mate-cloudtop, ubuntu-mate-desktop,
+   ubuntu-mate-core, ubuntu-mate-desktop,
    ubuntukylin-desktop, ubuntu-budgie-desktop
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 Demotions=demoted.cfg
@@ -95,15 +95,11 @@ KeyDependencies=lubuntu-core, lubuntu-default-settings
 KeyDependencies=ubuntu-gnome-default-settings, ubuntu-gnome-wallpapers
 
 [ubuntu-mate-core]
-KeyDependencies=mate-desktop-environment-core, ubuntu-mate-default-settings, ubuntu-mate-artwork
-PostUpgradeRemove=ibus
-
-[ubuntu-mate-cloudtop]
-KeyDependencies=mate-desktop-environment-core, ubuntu-mate-core, ubuntu-mate-default-settings, ubuntu-mate-artwork
+KeyDependencies=mate-desktop-environment-core, ubuntu-mate-default-settings, marco
 PostUpgradeRemove=ibus
 
 [ubuntu-mate-desktop]
-KeyDependencies=mate-desktop-environment-core, ubuntu-mate-core, ubuntu-mate-default-settings, ubuntu-mate-artwork
+KeyDependencies=ubuntu-mate-core, deja-dup-caja
 PostUpgradeRemove=ibus
 
 [ubuntukylin-desktop]
