Remove lightdm-greeter-gtk now Ubuntu MATE has transitioned to slick-greeter since 17.10.

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -96,11 +96,11 @@ KeyDependencies=ubuntu-gnome-default-settings, ubuntu-gnome-wallpapers
 
 [ubuntu-mate-core]
 KeyDependencies=mate-desktop-environment-core, ubuntu-mate-default-settings, marco
-PostUpgradeRemove=ibus
+PostUpgradeRemove=ibus,lightdm-gtk-greeter,lightdm-gtk-greeter-settings
 
 [ubuntu-mate-desktop]
 KeyDependencies=ubuntu-mate-core, deja-dup-caja
-PostUpgradeRemove=ibus
+PostUpgradeRemove=ibus,lightdm-gtk-greeter,lightdm-gtk-greeter-settings
 
 [ubuntukylin-desktop]
 KeyDependencies=ubuntukylin-keyring, ubuntukylin-wallpapers, ubuntu-kylin-docs
