releasing package ubuntu-release-upgrader version 1:18.04.16

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -3,17 +3,26 @@ android-tools-fsutils
 anthy
 anthy-common
 augeas-tools
+autogen-doc
+bbswitch-dkms
 ca-certificates-mono
+caribou
 cdbs
 cli-common
 cli-common-dev
 cpp-5
 cpp-5-doc
+cpp-6
+cpp-6-doc
+crmsh
+crmsh-doc
 cvs
 dh-translations
 docbook-xml
 docbook-xsl
-ecj-gcj
+ecj
+ecryptfs-utils
+ecryptfs-utils-dbg
 fig2dev
 fonts-alee
 fonts-arphic-bkai00mp
@@ -23,6 +32,7 @@ fonts-arphic-gkai00mp
 fonts-nanum
 fonts-nanum-coding
 fonts-nanum-extra
+fonts-symbola
 fonts-takao-gothic
 fonts-takao-mincho
 fonts-takao-pgothic
@@ -31,16 +41,24 @@ gcc-5
 gcc-5-base
 gcc-5-doc
 gcc-5-plugin-dev
+gcc-6
+gcc-6-base
+gcc-6-doc
+gcc-6-plugin-dev
+gcc-7-cross-base-ports
 gccgo-5-doc
-gcj-5-jre-lib
-gcj-6-jre-lib
+gccgo-6-doc
 gettext-el
 gfortran-5-doc
+gfortran-6-doc
 gir1.2-appindicator-0.1
+gir1.2-caribou-1.0
 gir1.2-dbusmenu-gtk-0.4
 gir1.2-gnomekeyring-1.0
 gir1.2-gucharmap-2.90
+gir1.2-telepathyglib-0.12
 gitk
+gnome-screensaver
 gnome-user-share
 golang-1.8
 golang-1.8-doc
@@ -83,6 +101,7 @@ golang-x-text-dev
 golang-yaml.v2-dev
 graphviz
 graphviz-doc
+gstreamer1.0-plugins-good-dbg
 gtk-sharp2-examples
 gucharmap
 gutenprint-locales
@@ -103,22 +122,48 @@ isoquery
 kerneloops-applet
 lib32asan2
 lib32asan2-dbg
+lib32asan3
+lib32asan3-dbg
 lib32gcc-5-dev
+lib32gcc-6-dev
 lib32gfortran-5-dev
+lib32gfortran-6-dev
+lib32gfortran3
+lib32gfortran3-dbg
+lib32gphobos-6-dev
+lib32gphobos68-dbg
+lib32gphobos71-dbg
 lib32mpx0-dbg
 lib32objc-5-dev
+lib32objc-6-dev
+lib32objc4-dbg
 lib32phobos-5-dev
 lib32stdc++-5-dev
+lib32stdc++-6-dev
 lib32stdc++6-5-dbg
+lib32stdc++6-6-dbg
 lib64asan2
 lib64asan2-dbg
+lib64asan3
+lib64asan3-dbg
 lib64gcc-5-dev
+lib64gcc-6-dev
 lib64gfortran-5-dev
+lib64gfortran-6-dev
+lib64gfortran3
+lib64gfortran3-dbg
+lib64gphobos-6-dev
+lib64gphobos68-dbg
+lib64gphobos71-dbg
 lib64mpx0-dbg
 lib64objc-5-dev
+lib64objc-6-dev
+lib64objc4-dbg
 lib64phobos-5-dev
 lib64stdc++-5-dev
+lib64stdc++-6-dev
 lib64stdc++6-5-dbg
+lib64stdc++6-6-dbg
 libanthy-dev
 libappindicator-dev
 libappindicator0.1-cil
@@ -126,6 +171,8 @@ libappindicator0.1-cil-dev
 libappindicator1
 libasan2
 libasan2-dbg
+libasan3
+libasan3-dbg
 libboost-atomic1.62-dev
 libboost-atomic1.62.0
 libboost-chrono1.62-dev
@@ -153,10 +200,22 @@ libboost1.62-dev
 libboost1.62-doc
 libboost1.62-tools-dev
 libcanberra-gtk-module
+libcaribou-common
+libcaribou-dev
+libcaribou0
 libcdt5
 libcgraph6
+libclang1-5.0
+libcommons-collections3-java
+libcommons-collections3-java-doc
+libcommons-dbcp-java
+libcommons-pool-java
+libcommons-pool-java-doc
+libcuda1-384
 libdbusmenu-gtk-dev
-libecj-java-gcj
+libecj-java
+libecryptfs-dev
+libecryptfs1
 libfreerdp-cache1.1
 libfreerdp-client1.1
 libfreerdp-codec1.1
@@ -171,20 +230,16 @@ libfreerdp-primitives1.1
 libfreerdp-rail1.1
 libfreerdp-utils1.1
 libgcc-5-dev
+libgcc-6-dev
 libgccjit-5-dev
 libgccjit-5-doc
-libgcj-bc
-libgcj-common
-libgcj16
-libgcj16-awt
-libgcj16-dbg
-libgcj16-dev
-libgcj17
-libgcj17-awt
-libgcj17-dbg
-libgcj17-dev
+libgccjit-6-dev
+libgccjit-6-doc
 libgdiplus
 libgfortran-5-dev
+libgfortran-6-dev
+libgfortran3
+libgfortran3-dbg
 libglade2-0
 libglade2-dev
 libglade2.0-cil
@@ -196,6 +251,9 @@ libgnome-keyring-dev
 libgnome-keyring0
 libgnome-keyring0-dbg
 libgolang-1.8-std1
+libgphobos-6-dev
+libgphobos68-dbg
+libgphobos71-dbg
 libgpod-cil
 libgpod-cil-dev
 libgraphviz-dev
@@ -203,6 +261,8 @@ libgsl-dbg
 libgsl-dev
 libgsl23
 libgslcblas0
+libgtk2-perl
+libgtk2-perl-doc
 libgtk2.0-cil
 libgtk2.0-cil-dev
 libgtkspell-dev
@@ -214,12 +274,18 @@ libgutenprintui2-dev
 libgvc6
 libgvc6-plugins-gtk
 libgvpr2
+libhsqldb1.8.0-java
 libical2
 libimage-magick-perl
 libimage-magick-q16-perl
 libindicator-dev
 libindicator3-dev
 libindicator7
+libisl15
+liblld-5.0
+liblld-5.0-dev
+libllvm5.0
+libllvm5.0-dbg
 libmono-2.0-dev
 libmono-accessibility4.0-cil
 libmono-cairo4.0-cil
@@ -377,21 +443,36 @@ libnunit-framework2.6.3-cil
 libnunit-mocks2.6.3-cil
 libnunit-util2.6.3-cil
 libobjc-5-dev
+libobjc-6-dev
+libobjc4-dbg
+libopts25
+libopts25-dev
 libosp-dev
 libosp5
 libostyle-dev
 libostyle1c2
+libpam-cgfs
+libpango-perl
 libpathplan4
 libphobos-5-dev
 libproxy-cil-dev
 libproxy0.4-cil
+libreoffice-base
+libreoffice-base-drivers
+libreoffice-sdbc-hsqldb
+libreoffice-style-elementary
 librrds-perl
 libserf-1-1
 libserf-dev
+libservlet3.1-java
+libservlet3.1-java-doc
 libstdc++-5-dev
 libstdc++-5-doc
 libstdc++-5-pic
+libstdc++-6-dev
+libstdc++-6-doc
 libstdc++6-5-dbg
+libstdc++6-6-dbg
 libsunpinyin-dev
 libsunpinyin3-dbg
 libsunpinyin3v5
@@ -399,6 +480,12 @@ libsvn-dev
 libsvn-doc
 libsvn-perl
 libsvn1
+libtaglibs-standard-impl-java
+libtaglibs-standard-spec-java
+libtelepathy-glib-dev
+libtelepathy-glib-doc
+libtelepathy-glib0
+libtomcat8-java
 libuniconf4.6
 libwinpr-asn1-0.1
 libwinpr-bcrypt0.1
@@ -438,12 +525,25 @@ libwvstreams4.6-doc
 libwvstreams4.6-extras
 libx32asan2
 libx32asan2-dbg
+libx32asan3
+libx32asan3-dbg
 libx32gcc-5-dev
+libx32gcc-6-dev
 libx32gfortran-5-dev
+libx32gfortran-6-dev
+libx32gfortran3
+libx32gfortran3-dbg
+libx32gphobos-6-dev
+libx32gphobos68-dbg
+libx32gphobos71-dbg
 libx32objc-5-dev
+libx32objc-6-dev
+libx32objc4-dbg
 libx32phobos-5-dev
 libx32stdc++-5-dev
+libx32stdc++-6-dev
 libx32stdc++6-5-dbg
+libx32stdc++6-6-dbg
 libxdot4
 libxfreerdp-client1.1
 libxml-dom-perl
@@ -451,6 +551,17 @@ libxml-perl
 libxml-regexp-perl
 libxplc0.3.13
 libxplc0.3.13-dev
+lld-5.0
+llvm-5.0
+llvm-5.0-dev
+llvm-5.0-doc
+llvm-5.0-examples
+llvm-5.0-runtime
+lua-filesystem
+lua-filesystem-dev
+lua5.2
+lxc
+lxd-tools
 mdetect
 mono-4.0-gac
 mono-csharp-shell
@@ -466,8 +577,21 @@ mono-utils
 mono-xbuild
 nabi
 ndiff
+ntp
+ntp-doc
+nvidia-opencl-icd-384
+openbsd-inetd
 openjade
+openjdk-8-dbg
+openjdk-8-demo
+openjdk-8-doc
+openjdk-8-jdk
+openjdk-8-jdk-headless
+openjdk-8-jre
+openjdk-8-jre-headless
+openjdk-8-source
 opensp
+plymouth-x11
 protobuf-compiler
 python-glade2
 python-gobject-2
@@ -477,26 +601,42 @@ python-gtk2
 python-gtk2-dbg
 python-gtk2-dev
 python-gtk2-doc
+python-neutron-vpnaas
 python-newt
 python-problem-report
 python-pyrex
+python-rrdtool
 python-scour
+python-sss
 python-subversion
 python-subversion-dbg
 python-svn
 python-tickcount
+python3-lxc
 python3-unicodecsv
 rrdtool-dbg
 rrdtool-tcl
 sgml-data
+sntp
 subversion
 subversion-tools
 sunpinyin-data
 system-config-kickstart
+tcl
+tcl-dev
+tcl-doc
+tcpd
+tk
+tk-dev
+tk-doc
+tomcat8
+tomcat8-admin
+tomcat8-common
+tomcat8-docs
+tomcat8-examples
 transfig
+ttf-ancient-fonts-symbola
 uuidcdef
 wvdial
-xchat-gnome
-xchat-gnome-common
 xinetd
 xterm
