* DistUpgrade/{EOL,Devel}ReleaseAnnouncement,   DistUpgrade/window_main.ui,   data/gtkbuilder/DistUpgrade.ui,   data/DistUpgrade.cfg,   pre-build.sh:   - updated for 18.04 -> 18.10

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -113,8 +113,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=artful
-To=bionic
+From=bionic
+To=cosmic
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
