releasing package ubuntu-release-upgrader version 1:18.10.9

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,6 +1,8 @@
 # demoted packages from bionic to cosmic
+adium-theme-ubuntu
 augeas-doc
 augeas-lenses
+bdf2psf
 bittornado
 bzr
 bzr-doc
@@ -13,6 +15,7 @@ devhelp
 devhelp-common
 dovecot-managesieved
 dovecot-sieve
+emacs-goodies-el
 g++-7
 g++-7-aarch64-linux-gnu
 g++-7-arm-linux-gnueabihf
@@ -36,6 +39,10 @@ gir1.2-devhelp-3.0
 gir1.2-gtk-2.0
 git-remote-bzr
 gtk2.0-examples
+guile-2.0
+guile-2.0-dev
+guile-2.0-doc
+guile-2.0-libs
 ifenslave
 libapache2-mod-python
 libapache2-mod-python-doc
@@ -67,6 +74,7 @@ libcilkrts5-armhf-cross
 libdevhelp-3-5
 libdevhelp-dev
 libfile-copy-recursive-perl
+libfwup-dev
 libgail-dev
 libgcc-7-dev-arm64-cross
 libgcc-7-dev-armhf-cross
@@ -100,6 +108,7 @@ libubsan0-armhf-cross
 libubsan0-powerpc-cross
 libubsan0-ppc64el-cross
 libxapian-java-doc
+light-themes
 llvm-3.9
 llvm-3.9-dev
 llvm-3.9-doc
@@ -130,3 +139,5 @@ python-xappy
 python3-d2to1
 python3-greenlet
 sbc-tools
+ubuntu-artwork
+ubuntu-sounds
